<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DecodeCustom">

    <TextView
        android:id="@+id/textViewCustom6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/textView_decoded_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCustom3"
        android:layout_width="323dp"
        android:layout_height="180dp"
        android:layout_marginTop="52dp"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustom6" />

    <TextView
        android:id="@+id/textViewCustom4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/textView_key_interval"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberCustom"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustom3" />

    <EditText
        android:id="@+id/editTextNumberCustom"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="92dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustom3" />

    <TextView
        android:id="@+id/textViewCustom5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/textView_key_jump"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberCustom2"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustom4" />

    <EditText
        android:id="@+id/editTextNumberCustom2"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="92dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberCustom" />

    <Button
        android:id="@+id/buttonCustom10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:onClick="decodeMidiFileCustom"
        android:text="@string/button_decode_midi_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberCustom2" />

</androidx.constraintlayout.widget.ConstraintLayout>