<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".EncodeWallz">

    <Button
        android:id="@+id/buttonW5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:onClick="audioPlayer"
        android:text="Play/Stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonW4" />

    <TextView
        android:id="@+id/textViewW3"
        android:layout_width="323dp"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewW6" />

    <TextView
        android:id="@+id/textViewW4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/textView_key_interval"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberW"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewW3" />

    <EditText
        android:id="@+id/editTextNumberW"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="92dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewW3" />

    <TextView
        android:id="@+id/textViewW5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/textView_key_jump"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberW2"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewW4" />

    <EditText
        android:id="@+id/editTextNumberW2"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="92dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberW" />

    <TextView
        android:id="@+id/textViewW6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/textView_final_text_to_encode"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonW4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:enabled="true"
        android:onClick="createMidiFileWallz"
        android:text="@string/button_create_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewW5" />

</androidx.constraintlayout.widget.ConstraintLayout>